fix container overflow

--- a/src/sections/about_section/about_section.module.scss
+++ b/src/sections/about_section/about_section.module.scss
@@ -1,4 +1,5 @@
 .about-section {
+    overflow: hidden;
     padding-top: 3rem;
     background-color: var(--container-bg-color);
 
@@ -6,7 +7,6 @@
         padding: 5rem 0 3rem;
         display: flex;
         justify-content: space-between;
-        overflow-x: hidden;
 
         @media all and (max-width: 850px) {
             flex-direction: column-reverse;
