--- a/src/sections/blog_section/blog_section.module.scss
+++ b/src/sections/blog_section/blog_section.module.scss
@@ -1,4 +1,6 @@
 .blog-section {
+    overflow: hidden;
+
     position: relative;
     padding-bottom: 25rem;
 
