--- a/src/sections/contact_section/contact_section.module.scss
+++ b/src/sections/contact_section/contact_section.module.scss
@@ -1,6 +1,8 @@
 .contact-section-styles {
     position: relative;
     padding-bottom: 22rem;
+    overflow: hidden;
+
 
     .contact-form-container {
         display: flex;
