--- a/src/sections/featured_products/featured_products.module.scss
+++ b/src/sections/featured_products/featured_products.module.scss
@@ -2,6 +2,8 @@
     background-color: var(--container-bg-color);
     padding: 5rem 0;
     min-height: 50vh;
+    overflow: hidden;
+
 
 
     .card-wrapper {
