--- a/src/sections/hero_section/hero_section.module.scss
+++ b/src/sections/hero_section/hero_section.module.scss
@@ -2,6 +2,8 @@
     position: relative;
     // padding: 0 0 10rem;
     // min-height: 70vh;
+    overflow: hidden;
+
 
     .row{
         margin-top: 6.5rem;
