--- a/src/sections/newsletter_section/newsletter_section.module.scss
+++ b/src/sections/newsletter_section/newsletter_section.module.scss
@@ -1,5 +1,6 @@
 .news-letter-section-styles {
     position: relative;
+    overflow: hidden;
     padding-bottom: 30rem;
 
     .form-container {
