--- a/src/sections/testimonial_section/testimonial_section.module.scss
+++ b/src/sections/testimonial_section/testimonial_section.module.scss
@@ -1,6 +1,8 @@
 .testimonial-section-styles {
     padding: 5rem 0;
     background-color: var(--container-bg-color);
+    overflow: hidden;
+
 
     .testimonial-container {
         display: flex;
